# forest_inventory_pipeline

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  pyproject.toml
config/: dbh.yaml  instance.yaml
cpp/: CMakeLists.txt
cpp/cmake/: StandardProjectOptions.cmake
cpp/quickshift/: CMakeLists.txt  README.md  cluster_remaining.cpp  compute_cores.cpp  functions.hpp  graph.cpp  graph.hpp  graph_basic.cpp  graph_basic.hpp  node.hpp  node_basic.hpp  quickshift.hpp
cpp/quickshift_pybind/: CMakeLists.txt  quickshift_pybind.cpp
docker/: .dockerignore  Dockerfile  compose.yaml
python/forest_inventory_pipeline/: __init__.py  clip_z.py  cloud.py  fip.py  render.py
python/forest_inventory_pipeline/cluster/: __init__.py  proj_and_cluster.py
python/forest_inventory_pipeline/cluster/quickshiftpp/: __init__.py  quickshiftpp.py
python/forest_inventory_pipeline/preprocess/: __init__.py  ground_segmentation.py  height_normalization.py
python/forest_inventory_pipeline/primitives/: cylinder.py
python/forest_inventory_pipeline/traits/: __init__.py
python/forest_inventory_pipeline/traits/dbh/: __init__.py  dbh.py  fit_cylinders.py  least_squares.py  ransac.py
python/forest_inventory_pipeline/utils/: __init__.py  decorators.py  io.py  math.py  rich_console.py  serialize.py  upsample.py
scripts/: README.md  from_las.py  to_las.py
scripts/evaluation/: dbh_estimation.py  instance_seg.py  panoptic_eval_metrics.py
tests/: README.md
tests/quickshift/: test_import.py  test_original_readme.py  test_random_data.py
tests/quickshift/test_original_readme/: readme_cluster_cores.npy  readme_data.npy  test_clusters.npy  test_cores.npy  test_data.npy  test_gt.npy
